@@ -10,6 +10,7 @@
 - little endian .lb8.ugrid import
 - removed ruby-wrapped unit tests to fix fun3d makedistcheck
 - removed dpw cruft
+- renamed ref_projectable and ref_axisymmetric
 
 Wed Sep 12, 2012 : Released Refine 1.8.8
 
